--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/library-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Online bookstore"
-    />
+    <meta name="description" content="Online bookstore" />
+    <script src="https://kit.fontawesome.com/ba6fc831d0.js" crossorigin="anonymous"></script>
     <title>Library</title>
   </head>
   <body>
