--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Online bookstore" />
-    <script src="https://kit.fontawesome.com/ba6fc831d0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ba6fc831d0.js" crossorigin="anonymous" defer></script>
     <title>Library</title>
   </head>
   <body>
